--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
     <h1>Learning JavaScript</h1>
     <script src="./day_1.js"></script>
     <script src="./day_2.js"></script>
+    <script src="./day_3.js"></script>
   </body>
 </html>
