--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
   </head>
   <body>
     <h1>Learning JavaScript</h1>
+
     <script src="./day_1.js"></script>
     <script src="./day_2.js"></script>
     <script src="./day_3.js"></script>
+    <script src="./day_4.js"></script>
   </body>
 </html>
