--- a/index.html
+++ b/index.html
@@ -30,5 +30,6 @@
     <script src="./day_2.js"></script>
     <script src="./day_3.js"></script>
     <script src="./day_4.js"></script>
+    <script src="./day_5.js"></script>
   </body>
 </html>
