--- a/index.html
+++ b/index.html
@@ -54,5 +54,6 @@
     <script src="./day_4.js"></script>
     <script src="./day_5.js"></script>
     <script src="./day_6.js"></script>
+    <script src="./day_7.js"></script>
   </body>
 </html>
