--- a/index.html
+++ b/index.html
@@ -55,5 +55,6 @@
     <script src="./day_5.js"></script>
     <script src="./day_6.js"></script>
     <script src="./day_7.js"></script>
+    <script src="./day_8.js"></script>
   </body>
 </html>
