--- a/index.html
+++ b/index.html
@@ -56,5 +56,6 @@
     <script src="./day_6.js"></script>
     <script src="./day_7.js"></script>
     <script src="./day_8.js"></script>
+    <script src="./day_9.js"></script>
   </body>
 </html>
