--- a/index.html
+++ b/index.html
@@ -57,5 +57,6 @@
     <script src="./day_7.js"></script>
     <script src="./day_8.js"></script>
     <script src="./day_9.js"></script>
+    <script src="./day_10.js"></script>
   </body>
 </html>
