in middle of day 11

--- a/index.html
+++ b/index.html
@@ -58,5 +58,6 @@
     <script src="./day_8.js"></script>
     <script src="./day_9.js"></script>
     <script src="./day_10.js"></script>
+    <script src="./day_11.js"></script>
   </body>
 </html>
