--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         box-sizing: border-box;
       }
       body {
-        background-image: linear-gradient(to top right, blue, purple);
+        background-color: #383737;
       }
 
       h1 {
