in middle of day 12

--- a/index.html
+++ b/index.html
@@ -59,5 +59,6 @@
     <script src="./day_9.js"></script>
     <script src="./day_10.js"></script>
     <script src="./day_11.js"></script>
+    <script src="./day_12.js"></script>
   </body>
 </html>
