--- a/index.html
+++ b/index.html
@@ -40,13 +40,22 @@
         align-items: center;
       }
     </style>
+    <title>A Simple Page</title>
   </head>
   <body>
-    <div class="booking">
+    <!-- <div class="booking">
       <button class="btn new-plane-btn">Buy new plane ✈️</button>
       <button class="btn answer-poll-btn">Answer poll 🤔</button>
-    </div>
-    <h1>Learning JavaScript</h1>
+    </div> -->
+    <!-- <h1>Learning JavaScript</h1> -->
+    <section>
+      <p>A paragraph with a <a href="#">link</a></p>
+      <p>A second paragraph</p>
+    </section>
+
+    <section>
+      <img src="mini_project_1_v2/img/grow.jpg" alt="The DOM" />
+    </section>
 
     <script src="./day_1.js"></script>
     <script src="./day_2.js"></script>
@@ -60,5 +69,6 @@
     <script src="./day_10.js"></script>
     <script src="./day_11.js"></script>
     <script src="./day_12.js"></script>
+    <script src="./day_13.js"></script>
   </body>
 </html>
