--- a/mini_project_1_v2/index.html
+++ b/mini_project_1_v2/index.html
@@ -21,16 +21,21 @@
           alt="Bankist logo"
           class="nav__logo"
           id="logo"
+          designer="Jonas"
+          data-version-number="3.0"
         />
         <ul class="nav__links">
           <li class="nav__item">
             <a class="nav__link" href="#section--1">Features</a>
+            <!-- <a class="nav__link" href="#">Features</a> -->
           </li>
           <li class="nav__item">
             <a class="nav__link" href="#section--2">Operations</a>
+            <!-- <a class="nav__link" href="#">Operations</a> -->
           </li>
           <li class="nav__item">
             <a class="nav__link" href="#section--3">Testimonials</a>
+            <!-- <a class="nav__link" href="#">Testimonials</a> -->
           </li>
           <li class="nav__item">
             <a class="nav__link nav__link--btn btn--show-modal" href="#"
