--- a/index.html
+++ b/index.html
@@ -70,5 +70,6 @@
     <script src="./day_11.js"></script>
     <script src="./day_12.js"></script>
     <script src="./day_13.js"></script>
+    <script src="./day_14.js"></script>
   </body>
 </html>
