in middle of day 16

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div> -->
     <!-- <h1>Learning JavaScript</h1> -->
     <section>
-      <p>A paragraph with a <a href="#">link</a></p>
+      <h1>A paragraph with a <a href="#">link</a></h1>
       <p>A second paragraph</p>
     </section>
 
@@ -71,5 +71,7 @@
     <script src="./day_12.js"></script>
     <script src="./day_13.js"></script>
     <script src="./day_14.js"></script>
+    <script src="./day_15.js"></script>
+    <script src="./day_16.js"></script>
   </body>
 </html>
