--- a/index.html
+++ b/index.html
@@ -74,5 +74,6 @@
     <script src="./day_14.js"></script>
     <script src="./day_15.js"></script>
     <script src="./day_16.js"></script>
+    <script src="./day_17.js"></script>
   </body>
 </html>
