--- a/mapty/index.html
+++ b/mapty/index.html
@@ -72,7 +72,7 @@
           <button class="form__btn">OK</button>
         </form>
 
-        <!-- <li class="workout workout--running" data-id="1234567890">
+        <li class="workout workout--running" data-id="1234567890">
           <h2 class="workout__title">Running on April 14</h2>
           <div class="workout__details">
             <span class="workout__icon">🏃‍♂️</span>
@@ -114,11 +114,11 @@
             <span class="workout__unit">km/h</span>
           </div>
           <div class="workout__details">
-            <span class="workout__icon">⛰</span>
+            <span class="workout__icon">⛰️</span>
             <span class="workout__value">223</span>
             <span class="workout__unit">m</span>
           </div>
-        </li> -->
+        </li>
       </ul>
 
       <p class="copyright">
