in middle of day 18

--- a/index.html
+++ b/index.html
@@ -3,45 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Day-01</title>
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
-      body {
-        background-color: #383737;
-      }
-
-      h1 {
-        font-size: 4rem;
-        color: white;
-        height: 100vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-
-      .booking {
-        margin-top: 1rem;
-        width: 100%;
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-      }
-
-      .btn {
-        font-size: 2rem;
-        font-weight: bold;
-        padding: 0.75rem;
-        margin: 1rem;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-    </style>
     <title>A Simple Page</title>
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <!-- <div class="booking">
@@ -49,16 +12,33 @@
       <button class="btn answer-poll-btn">Answer poll 🤔</button>
     </div> -->
     <!-- <h1>Learning JavaScript</h1> -->
-    <section>
+    <!-- <section>
       <h1>A paragraph with a <a href="#">link</a></h1>
       <p>A second paragraph</p>
     </section>
 
     <section>
       <img src="mini_project_1_v2/img/grow.jpg" alt="The DOM" />
-    </section>
+    </section> -->
 
-    <script src="./day_1.js"></script>
+    <main class="container">
+      <div class="countries">
+        <!-- <article class="country">
+          <img class="country__img" src="" />
+          <div class="country__data">
+            <h3 class="country__name">COUNTRY</h3>
+            <h4 class="country__region">REGION</h4>
+            <p class="country__row"><span>👫</span>POP people</p>
+            <p class="country__row"><span>🗣️</span>LANG</p>
+            <p class="country__row"><span>💰</span>CUR</p>
+          </div>
+        </article> -->
+      </div>
+      <button class="btn-country">Where am I?</button>
+      <div class="images"></div>
+    </main>
+
+    <!-- <script src="./day_1.js"></script>
     <script src="./day_2.js"></script>
     <script src="./day_3.js"></script>
     <script src="./day_4.js"></script>
@@ -74,6 +54,7 @@
     <script src="./day_14.js"></script>
     <script src="./day_15.js"></script>
     <script src="./day_16.js"></script>
-    <script src="./day_17.js"></script>
+    <script src="./day_17.js"></script> -->
+    <script src="./day_18.js"></script>
   </body>
 </html>
