--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     <script src="./day_15.js"></script>
     <script src="./day_16.js"></script>
     <script src="./day_17.js"></script> -->
-    <script src="./day_18.js"></script>
+    <!-- <script src="./day_18.js"></script> -->
+    <script src="./day_19.js"></script>
   </body>
 </html>
