in middle of day 20

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     <script src="./day_16.js"></script>
     <script src="./day_17.js"></script> -->
     <!-- <script src="./day_18.js"></script> -->
-    <script src="./day_19.js"></script>
+    <!-- <script src="./day_19.js"></script> -->
+    <script src="./day_20.js"></script>
   </body>
 </html>
