--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <main class="container">
       <div class="countries">
-        <!-- <article class="country">
+        <!--   <article class="country">
           <img class="country__img" src="" />
           <div class="country__data">
             <h3 class="country__name">COUNTRY</h3>
@@ -34,7 +34,7 @@
           </div>
         </article> -->
       </div>
-      <button class="btn-country">Where am I?</button>
+      <!-- <button class="btn-country">Where am I?</button> -->
       <div class="images"></div>
     </main>
 
@@ -56,7 +56,7 @@
     <script src="./day_16.js"></script>
     <script src="./day_17.js"></script> -->
     <!-- <script src="./day_18.js"></script> -->
-    <!-- <script src="./day_19.js"></script> -->
+    <script src="./day_19.js"></script>
     <script src="./day_20.js"></script>
   </body>
 </html>
