--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
     <script src="./day_16.js"></script>
     <script src="./day_17.js"></script> -->
     <!-- <script src="./day_18.js"></script> -->
-    <script src="./day_19.js"></script>
-    <script src="./day_20.js"></script>
+    <!-- <script src="./day_19.js"></script>
+    <script src="./day_20.js"></script> -->
+    <!-- <script type="module" src="./day_21.js"></script> -->
+    <script type="module" src="./day_21.js"></script>
   </body>
 </html>
