--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     <!-- <script src="./day_19.js"></script>
     <script src="./day_20.js"></script> -->
     <!-- <script type="module" src="./day_21.js"></script> -->
-    <script type="module" src="./day_21.js"></script>
+    <!-- <script type="module" src="./day_21.js"></script> -->
+    <script src="./day_22.js"></script>
   </body>
 </html>
