--- a/forkify/index.html
+++ b/forkify/index.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="src/img/favicon.png" type="image/x-icon" />
 
     <link rel="stylesheet" href="src/sass/main.scss" />
-    <script defer src="src/js/controller.js"></script>
+    <script type="module" src="src/js/controller.js"></script>
 
     <title>forkify // Search over 1,000,000 recipes</title>
   </head>
@@ -67,7 +67,7 @@
                   <!-- <li class="preview">
                     <a class="preview__link" href="#23456">
                       <figure class="preview__fig">
-                        <img src="src/img/test-1.jpg" alt="Test" />
+                        <img src="src/img/logo.png" alt="Test" />
                       </figure>
                       <div class="preview__data">
                         <h4 class="preview__name">
@@ -142,12 +142,6 @@
           </div>
           <p>Start by searching for a recipe or an ingredient. Have fun!</p>
         </div>
-
-        <!-- <div class="spinner">
-          <svg>
-            <use href="src/img/icons.svg#icon-loader"></use>
-          </svg>
-        </div> -->
 
         <!-- <div class="error">
             <div>
