--- a/forkify/index.html
+++ b/forkify/index.html
@@ -86,6 +86,17 @@
 
       <div class="search-results">
         <ul class="results">
+          <a href="#664c8f193e7aa067e94e8454" style="font-size: 2rem"
+            >Recipie - 1</a
+          >
+          <br />
+          <a href="#664c8f193e7aa067e94e863d" style="font-size: 2rem"
+            >Recipie - 2</a
+          >
+          <br />
+          <a href="#664c8f193e7aa067e94e8355" style="font-size: 2rem"
+            >Recipie - 3</a
+          >
           <!-- 
           <li class="preview">
             <a class="preview__link preview__link--active" href="#23456">
@@ -142,15 +153,6 @@
           </div>
           <p>Start by searching for a recipe or an ingredient. Have fun!</p>
         </div>
-
-        <!-- <div class="error">
-            <div>
-              <svg>
-                <use href="src/img/icons.svg#icon-alert-triangle"></use>
-              </svg>
-            </div>
-            <p>No recipes found for your query. Please try again!</p>
-          </div> -->
 
         <!--
         <figure class="recipe__fig">
