--- a/forkify/index.html
+++ b/forkify/index.html
@@ -204,9 +204,9 @@
           <label>Title</label>
           <input value="TEST" required name="title" type="text" />
           <label>URL</label>
-          <input value="TEST" required name="sourceUrl" type="text" />
+          <input value="TEST2024" required name="sourceUrl" type="text" />
           <label>Image URL</label>
-          <input value="TEST" required name="image" type="text" />
+          <input value="TEST2024" required name="imageUrl" type="text" />
           <label>Publisher</label>
           <input value="TEST" required name="publisher" type="text" />
           <label>Prep time</label>
